# ros-realsense-d400-snap-pkg

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  generate_snap.sh  package.xml  rs_camera_snap.sh
.snapcraft/: travis_snapcraft.cfg
snap/: snapcraft.yaml
snap/hooks/: configure
